--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                     <a data-w-id="386a7275-56b2-7267-ef46-b1226918b884" href="/project/moon-motorbike" class="project-large w-inline-block">
                                         <div data-w-id="438e59b0-3dc0-4651-7323-469ddc47fb71" class="project-large-image-container">
                                             <div class="project-image">
-                                                <img data-w-id="4fc5b642-2d77-31c9-ddfd-451efa9920b7" src="https://assets.website-files.com/5c1bb997cb1dd611a0e6c8ce/6040054fa9dc153d711966af_WestStudio-MoonMotorbike-03.jpg" alt="" sizes="(max-width: 479px) 89vw, (max-width: 767px) 93vw, (max-width: 991px) 87vw, 98vw" class="project-image-element"/>
+                                                <img data-w-id="4fc5b642-2d77-31c9-ddfd-451efa9920b7" src="img/AK.png" alt="" sizes="(max-width: 479px) 89vw, (max-width: 767px) 93vw, (max-width: 991px) 87vw, 98vw" class="project-image-element"/>
                                             </div>
                                         </div>
                                         <div class="project-card-content">
@@ -207,7 +207,7 @@
                                     <a data-w-id="386a7275-56b2-7267-ef46-b1226918b884" href="/project/valorant" class="project-large w-inline-block">
                                         <div data-w-id="438e59b0-3dc0-4651-7323-469ddc47fb71" class="project-large-image-container">
                                             <div class="project-image">
-                                                <img data-w-id="4fc5b642-2d77-31c9-ddfd-451efa9920b7" src="https://assets.website-files.com/5c1bb997cb1dd611a0e6c8ce/5f754ea77efbca0e924d2206_WestStudio-Valorant-30.jpg" alt="" sizes="(max-width: 479px) 89vw, (max-width: 767px) 93vw, (max-width: 991px) 87vw, 98vw" class="project-image-element"/>
+                                                <img data-w-id="4fc5b642-2d77-31c9-ddfd-451efa9920b7" src="img/Snapshot_04.jpg" alt="" sizes="(max-width: 479px) 89vw, (max-width: 767px) 93vw, (max-width: 991px) 87vw, 98vw" class="project-image-element"/>
                                             </div>
                                         </div>
                                         <div class="project-card-content">
@@ -230,7 +230,7 @@
                 <div class="container push-left no-max">
                     <div class="footer-brand">
                         <a href="/" aria-current="page" class="footer-logo w-inline-block w--current">
-                            <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c1bc4df1b2526637790991f_West-Logo-Footer.svg" alt="" class="image-2"/>
+                            <img src="img/LogoPR.png" alt="" class="image-2"/>
                         </a>
                     </div>
                     <div class="flex-row footer-details">
