--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="Navigation" class="nav-section">
                 <div class="navigation-bar">
                     <a href="/" aria-current="page" class="link-block fade-page-on-click w-inline-block w--current">
-                        <img src="img/LogoP.png" alt=""/>
+                        <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c1bc2071b25267c1f90948b_West-Logo-W.svg" alt=""/>
                             <div class="div-block-15"></div>
                         </a>
                         <div class="nav-title-container">
@@ -37,7 +37,7 @@
                         <div class="nav-section">
                             <div class="navigation-bar">
                                 <a href="/" aria-current="page" class="w-inline-block w--current">
-                                    <img src="img/LogoP.png" alt=""/>
+                                    <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c1bc2071b25267c1f90948b_West-Logo-W.svg" alt=""/>
                                 </a>
                                 <div class="nav-title-container">
                                     <div class="nav-title">Ferran Iglesias</div>
@@ -157,6 +157,7 @@
                                     </div>
                                     <div class="home-h1-container">
                                         <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c2d2eaabc074d6ebe61f27b_HomeH1_VECTOR.svg" style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.9500000000000001, 0.9500000000000001, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.9500000000000001, 0.9500000000000001, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.9500000000000001, 0.9500000000000001, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.9500000000000001, 0.9500000000000001, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" alt="" class="home-h1-image"/>
+                                        <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c4c8535c49ea65574b029be_home-h1-mobile.svg" alt="" class="home-h1-image mobile"/>
                                     </div>
                                 </div>
                             </div>
@@ -272,7 +273,7 @@
                 </a>
             </div>
             <div class="loader-container">
-                <img src="img/LogoPB.png" width="65" alt="" class="loading-logo"/>
+                <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c3f609ecfcf33a080a839b0_Loader-Logo.svg" width="65" alt="" class="loading-logo"/>
                 <div class="loading-spinner"></div>
             </div>
             <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5c1bb997cb1dd637bfe6c899" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
