--- a/texturing.html
+++ b/texturing.html
@@ -118,23 +118,13 @@
                                 <h5 class="text-dark">follow</h5>
                                     <ul role="list" class="social-links w-list-unstyled">
                                         <li class="social-link">
-                                            <a href="https://www.facebook.com/tylerweststudio/" target="_blank" class="social-icon-link w-inline-block">
-                                                <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c2f9066a2f1203910d81116_Facebook.svg" alt=""/>
+                                            <a href="https://www.artstation.com/ayixed/profile" target="_blank" class="social-icon-link w-inline-block">
+                                                <img src="img/ArtStation-logomark-white.svg" alt=""/>
                                             </a>
                                         </li>
                                         <li class="social-link">
-                                            <a href="https://www.instagram.com/weststudionews/" target="_blank" class="social-icon-link w-inline-block">
-                                                <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c2f906731b7b2b28d8696d4_Instagram.svg" alt=""/>
-                                            </a>
-                                        </li>
-                                        <li class="social-link">
-                                            <a href="https://twitter.com/WestStudioNews" target="_blank" class="social-icon-link w-inline-block">
-                                                <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c2f90664763d2948a6c05da_Twitter.svg" alt=""/>
-                                            </a>
-                                        </li>
-                                        <li class="social-link">
-                                            <a href="https://vimeo.com/weststudio" target="_blank" class="social-icon-link w-inline-block">
-                                                <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c2f91d731b7b2fdbf8698e0_Vimeo.svg" alt=""/>
+                                            <a href="https://www.behance.net/ferran_07" target="_blank" class="social-icon-link w-inline-block">
+                                                <img src="img/behance.svg" alt=""/>
                                             </a>
                                         </li>
                                     </ul>
