--- a/lighting.html
+++ b/lighting.html
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                     <a href="#back-to-top" class="back-to-top w-inline-block">
-                        <img src="https://assets.website-files.com/5c1bb997cb1dd637bfe6c899/5c1bf86b6f08bd36c1d08150_Arrow-Up.svg" alt="" class="back-to-top-image"/>
+                        <img src="img/Arrow-Up.svg" alt="" class="back-to-top-image"/>
                     </a>
                 </div>
                 <div class="loader-container">
